--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,32 @@
 doctype html
-html
+html(lang='en')
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Welcome
+    link(href='/stylesheets/style.css', rel='stylesheet')
+    link(href='/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
   body
-    block content
+    .navbar.navbar-default(role='navigation')
+      .container
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') User Authorization
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li(class=(title == 'Members' ? 'active' : ''))
+              a(href='/') Members
+            li(class=(title == 'Register' ? 'active' : ''))
+              a(href='/users/register') Register
+            li(class=(title == 'Login' ? 'active' : ''))
+              a(href='/users/login') Login
+          ul.nav.navbar-nav.navbar-right
+           li
+              a(href='/users/logout') Logout
+    .container
+     block content
+
+    script(src='/jquery/dist/jquery.js')
+    script(src='/bootstrap/dist/js/bootstrap.js')
