adds user model and flash messages

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,7 @@ html(lang='en')
            li
               a(href='/users/logout') Logout
     .container
+     != messages()
      block content
 
     script(src='/jquery/dist/jquery.js')
