--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,22 @@
-/*body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+ul.flash {
+  list-style-type: none;
 }
 
-a {
-  color: #00B7FF;
-}*/
+ul.flash li {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+ul.success li {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+ul.error li {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
