--- a/client/views/layout.jade
+++ b/client/views/layout.jade
@@ -16,14 +16,13 @@ html(lang='en')
           a.navbar-brand(href='#') User Authorization
         .navbar-collapse.collapse
           ul.nav.navbar-nav
-            li(class=(title == 'Members' ? 'active' : ''))
-              a(href='/') Members
             li(class=(title == 'Register' ? 'active' : ''))
               a(href='/users/register') Register
             li(class=(title == 'Login' ? 'active' : ''))
               a(href='/users/login') Login
-          ul.nav.navbar-nav.navbar-right
-           li
+          if title == "Members"
+            ul.nav.navbar-nav.navbar-right
+             li
               a(href='/users/logout') Logout
     .container
      != messages()
