fixes configuration for ubuntu

--- a/client/views/layout.jade
+++ b/client/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html(lang='en')
   head
     title Welcome
-    link(href='/stylesheets/style.css', rel='stylesheet')
-    link(href='/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/auth/stylesheets/style.css', rel='stylesheet')
+    link(href='/auth/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
   body
     .navbar.navbar-default(role='navigation')
       .container
@@ -29,5 +29,5 @@ html(lang='en')
      != messages()
      block content
 
-    script(src='/jquery/dist/jquery.js')
-    script(src='/bootstrap/dist/js/bootstrap.js')
+    script(src='/auth/jquery/dist/jquery.js')
+    script(src='/auth/bootstrap/dist/js/bootstrap.js')
